--- a/action.yml
+++ b/action.yml
@@ -73,3 +73,10 @@ runs:
               "password": "${{ inputs.anypointClientId }}~?~${{ inputs.anypointClientSecret }}" 
             }
           ]
+         
+    # required since the mvn release:prepare will make some commits with git
+    - name: set git user
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git config --global merge.ff only
