--- a/action.yml
+++ b/action.yml
@@ -80,3 +80,4 @@ runs:
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
         git config --global merge.ff only
+      shell: bash
