--- a/action.yml
+++ b/action.yml
@@ -81,3 +81,11 @@ runs:
         git config --global user.name "GitHub Actions"
         git config --global merge.ff only
       shell: bash
+      
+    - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
