--- a/action.yml
+++ b/action.yml
@@ -21,10 +21,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up JDK 8
+    - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
+        java-version: '11.0.25+9'
         distribution: 'temurin'
 
     # add the required maven-repos and settings
