--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,8 @@ runs:
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '11.0.25+9'
+        java-version: '11.0.21'
+        # '11.0.25+9'
         distribution: 'temurin'
 
     # add the required maven-repos and settings
