--- a/action.yml
+++ b/action.yml
@@ -21,10 +21,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up JDK 11
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11.0.21'
+        java-version: '8'
         # '11.0.25+9'
         distribution: 'temurin'
 
