--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ runs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
+        java-version: '11.0.25+9'
         # '11.0.25+9'
         distribution: 'temurin'
 
